[metadata]
description-file = README.rst

[tool:pytest]
python_files=*.py
# pytest-pep8 (py2)
pep8maxlinelength = 120
# pytest-pycodestyle (py3)
codestyle_max_line_length = 120

[build_sphinx]
source-dir = doc
build-dir  = doc/_build
all_files  = 1

[upload_sphinx]
upload-dir = docs/build/html

[wheel]
universal = 1
